# api-server/api/openapi.yaml
@@ -106,6 +106,23 @@ paths:
           description: OK
         "404":
           description: Not Found
+  /upload/massbank:
+    post:
+      requestBody:
+        $ref: '#/components/requestBodies/inline_object'
+        content:
+          multipart/form-data:
+            schema:
+              properties:
+                filename:
+                  type: string
+                file:
+                  format: binary
+                  type: string
+              type: object
+      responses:
+        "200":
+          description: OK
 components:
   parameters:
     offsetParam:
@@ -147,6 +164,12 @@ components:
       schema:
         type: string
       style: simple
+  requestBodies:
+    inline_object:
+      content:
+        multipart/form-data:
+          schema:
+            $ref: '#/components/schemas/inline_object'
   schemas:
     SpectrumListItem:
       additionalProperties:
@@ -169,4 +192,12 @@ components:
           type: string
       required:
       - accession
+      type: object
+    inline_object:
+      properties:
+        filename:
+          type: string
+        file:
+          format: binary
+          type: string
       type: object
